z-index fix

--- a/lilac.css
+++ b/lilac.css
@@ -182,7 +182,6 @@ textarea:focus, input:focus{
     box-shadow: var(--shadow);
     background-color: var(--bg-color);
     filter: brightness(97%);
-    z-index: 2;
 }
 
 .dialog {
@@ -190,6 +189,7 @@ textarea:focus, input:focus{
     padding: 4em;
     margin: 5%;
     margin-top: 10%;
+    z-index: 2;
 }
 
 .darken-page {
@@ -236,7 +236,7 @@ textarea:focus, input:focus{
 
 nav {
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     background-color: var(--main-color);
     color: var(--inverted-font-color);
     height: var(--nav-height);
